--- a/dataProject1.ipynb
+++ b/dataProject1.ipynb
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "f0cb50d8",
    "metadata": {
     "scrolled": true
@@ -1874,6 +1874,7 @@
     }
    ],
    "source": [
+    "# Assign figure size\n",
     "plt.rcParams[\"figure.figsize\"] = (8, 4)\n",
     "# Group month and year for arrest counts\n",
     "arrest_counts_grouped = arrest_counts.groupby(['arrest_month', 'arrest_year']).sum().reset_index()\n",
@@ -1891,7 +1892,7 @@
     "legend = plt.legend(title=\"Year\",\n",
     "                    loc=1, fontsize='small', fancybox=True)\n",
     "\n",
-    "#add tick marks for months\n",
+    "# Add tick marks for months\n",
     "months = np.arange(1, 13)  \n",
     "plt.xticks(months)\n",
     "# Save the figure\n",
@@ -1903,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "d50d8679",
    "metadata": {
     "scrolled": true
@@ -2642,6 +2643,17 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "f6b9a5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the Data into a csv\n",
+    "Narcotic_arrests_counts.to_csv(\"Data/narcotics_arrests.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "5d63a0be",
    "metadata": {},
    "outputs": [],
@@ -2652,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5bd0179e",
    "metadata": {},
    "outputs": [],
@@ -2668,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "35c08815",
    "metadata": {},
    "outputs": [],
@@ -2679,7 +2691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
+   "id": "09255d86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the Data into a csv\n",
+    "Handgun_arrests_counts.to_csv(\"Data/handgun_arrests.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "79a14425",
    "metadata": {},
    "outputs": [
@@ -2709,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "77abb4ef",
    "metadata": {},
    "outputs": [
@@ -2730,22 +2753,6 @@
     "# Print the correlation coefficient\n",
     "print(f\"The correlation coefficient between Narcotics Arrests and Handgun Arrests is {correlation}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bebdd9ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c73ac03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
